# osmosis

./: .envrc  .gitignore  MANIFEST.in  README.md  build.sh  flake.nix  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  codeql.yml  format-and-lint.yml  nix-ci.yml  publish.yml
nix/: coremltools.nix  default.nix  osmosis-frontend.nix  osmosis.nix  overlay.nix
nix/flake/: default.nix
osmosis/: __init__.py  __main__.py  cli.py
osmosis/backend/: config.py  fs.py  model.py  restoration.py  schedulers.py  server.py  utils.py
osmosis/backend/coreml/: LICENSE.md  chunk_mlprogram.py  coreml_model.py  layer_norm.py  pipeline.py  torch2coreml.py  unet.py
osmosis/frontend/: .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.config.json  tsconfig.json  vite.config.ts
osmosis/frontend/src/: App.vue  main.ts  router.ts  styles.css
osmosis/frontend/src/components/: CurrentImageView.vue  GalleryView.vue  LoadModel.vue  LoadModelTextInput.vue  LoadingScreen.vue  ProgressBar.vue  Switch.vue  TopBar.vue
osmosis/frontend/src/lib/: store.ts  types.ts  utils.ts  ws.ts
osmosis/frontend/src/views/: TextToImage.vue
