[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "osmosis"
description = "An experimental Stable Diffusion frontend"
authors = [{ name = "Ryan Cao", email = "hello@ryanccn.dev" }]

readme = "README.md"
requires-python = ">=3.9, <3.11"

dynamic = ["version"]

dependencies = [
  "diffusers[torch]~=0.14",
  "safetensors",
  "compel~=1.0.5",
  "transformers",
  "accelerate",
  "coremltools~=6.3.0; sys_platform=='darwin'",
  "flask~=2.2.3",
  "flask-socketio~=5.3.3",
  "eventlet",
  "torch>=1.12.1",
  "realesrgan~=0.3.0",
  "gfpgan~=1.3.8",
  "click~=8.1.3",
  "rich",
  "tqdm",
  "omegaconf",
  "psutil",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: GPU",
  "Environment :: GPU :: NVIDIA CUDA",
  "Environment :: MacOS X",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: JavaScript",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
osmosis = "osmosis.cli:main"

[project.optional-dependencies]
"dev" = ["black"]
"xformers" = [
  "xformers~=0.0.18; sys_platform!='darwin'",
  "triton; sys_platform=='linux'",
]

[tool.flit.external-data]
directory = "osmosis/frontend/dist"
